Login y formulario terminado

--- a/login.html
+++ b/login.html
@@ -5,18 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="./css/loginstyle.css">
+	<link rel="shortcut icon" href="./Imagenes/favicon.png" type="image/x-icon">
 </head>
 <body>
     <div class="body"></div>
-		<div class="grad"></div>
-		<div class="header">
-			<div>Car<span>Hub</span></div>
-		</div>
-		
-		<div class="login">
-				<input type="text" placeholder="Username" name="user"><br>
-				<input type="password" placeholder="Password" name="password"><br>
-				<input type="button" value="Login">
-		</div>
+    <div class="grad"></div>
+    <div class="header">
+
+    </div>
+
+    <div class="login">
+		<div class="titulo">Car<span>Hub</span></div>
+        <input type="text" placeholder="Usuario" name="user"><br>
+        <input type="password" placeholder="Contraseña" name="password"><br>
+        <input type="button" value="Login">
+        <input type="button" value="Sing up" href="formularioinser.html">
+    </div>
 </body>
 </html>
