--- a/crud.html
+++ b/crud.html
@@ -3,10 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crud</title>
     <link rel="stylesheet" href="./css/crudstyle.css">
+    <link rel="shortcut icon" href="./Imagenes/favicon.png" type="image/x-icon">
+    <title>Lista</title>
 </head>
 <body>
-    
+    <div id="container">
+        
+<table>
+    <caption>USUARIOS</caption>
+    <tr>
+        <th>Num</th>
+        <th>Nombre</th>
+        <th>Apellidos</th>
+        <th>Email</th>
+        <th>Usuario</th>
+        <th>Fecha nacimiento</th>
+        <th>Genero</th>
+        <th>Contraseña</th>
+        <th>Acciones</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>Zarco</td>
+        <td>Man</td>
+        <td>zarcoelman@gmail.com</td>
+        <td>__Zarcooo</td>
+        <td>22/03/24</td>
+        <td>Hombre </td>
+        <td>12345morenito</td>
+        <th><button class="btn warning">Editar</button><button class="btn danger">Borrar</button></th>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>Pablo</td>
+        <td>Galvez</td>
+        <td>pablogalvez@gmail.com</td>
+        <td>PabloG18</td>
+        <td>18/5/1999</td>
+        <td>Hombre</td>
+        <td>elmaquinon18</td>
+        <th><button class="btn warning">Editar</button><button class="btn danger">Borrar</button></th>
+    </tr>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>Alba</td>
+        <td>Robledo</td>
+        <td>albarobledo@gmail.com</td>
+        <td>LaRobledo</td>
+        <td>04/4/2004</td>
+        <td>Mujer</td>
+        <td>spraydetomate</td>
+        <th><button class="btn warning">Editar</button><button class="btn danger">Borrar</button></th>
+    </tr>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>Ana</td>
+        <td>Postigo</td>
+        <td>anapostigo@gmail.com</td>
+        <td>Postigooo</td>
+        <td>01/07/2001</td>
+        <td>Mujer</td>
+        <td>daw1nuevaplus</td>
+        <th><button class="btn warning">Editar</button><button class="btn danger">Borrar</button></th>
+    </tr>
+    </tr>
+    <tr>
+        <td>5</td>
+        <td>Adri</td>
+        <td>Luque</td>
+        <td>adriluque@gmail.com</td>
+        <td>Aluquee</td>
+        <td>29/11/2006</td>
+        <td>Otro</td>
+        <td>mildos3</td>
+        <th><button class="btn warning">Editar</button><button class="btn danger">Borrar</button></th>
+    </tr>
+    </tr>
+</table>
+
+    </div>
 </body>
 </html>
